--- a/style/style.css
+++ b/style/style.css
@@ -224,6 +224,12 @@ body {
     display: flex;
 }
 
+.book-image-details-inner-container {
+    width: 100%;
+    height: 35vh;
+    display: flex;
+}
+
 .book-image-container-info {
     width: 50%;
     flex-grow: 1;
@@ -273,6 +279,11 @@ body {
 
 .book-description-container-info {
     width: 90%;
+    height: 15vh;
+}
+
+.book-description-inner-container-info {
+    width: 100%;
     height: 15vh;
     word-wrap: break-word;
     text-align: justify;
@@ -366,6 +377,100 @@ body {
     color : #424142;
     font-size: 1.6vh;
     margin-top: -5px;
+}
+
+.buyer-information-container {
+    width: 90%;
+    max-height: 19vh;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 1vh;
+}
+
+.buyer-information-header {
+    width: 100%;
+    height: 3vh;
+    font-family : Palatino Linotype;
+    color : #121212;
+    font-weight: bold;
+    font-size: 2.2vh;
+}
+
+.buyer-information {
+    width: 100%;
+    max-height: 14vh;
+    border: 1px solid grey;
+    display: flex;
+    flex-wrap: wrap;
+    overflow-y: auto;
+    align-items: center;
+}
+
+.buyer {
+    width: 100%;
+    height: 5vh;
+    display: flex;
+    align-items: center;
+}
+
+.buyer:nth-child(odd) {
+     background-color: #E7E7E7;
+}
+
+.buyer-name-and-address {
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    font-family : Plantagenet Cherokee;
+    color : #424142;
+}
+
+.buyer-name {
+    width: 100%;
+    height: 2vh;
+    font-size: 1.8vh;
+    display: flex;
+    align-items: center;
+}
+
+.buyer-address {
+    width: 100%;
+    height: 3vh;
+    overflow-y: auto;
+    font-size: 1.5vh;
+    display: flex;
+    align-items: center;
+}
+
+.request-status {
+    width: 20%;
+    display: flex;
+    justify-content: space-around;
+    height: 4vh;
+}
+
+.request-accept {
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.request-reject {
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.request-accept:hover {
+    background-color: #7df481;
+}
+
+.request-reject:hover {
+    background-color: #fb6969;
 }
 
 .iphone-container {
