--- a/style/style.css
+++ b/style/style.css
@@ -341,7 +341,7 @@ body {
 
 .horizontal-line-info {
     width: 90%;
-    height: 0.01vh;
+    height: 0.02vh;
     background-color: black;
 }
 
@@ -398,12 +398,20 @@ body {
 
 .buyer-information {
     width: 100%;
-    max-height: 14vh;
+    height: 14vh;
     border: 1px solid grey;
     display: flex;
     flex-wrap: wrap;
     overflow-y: auto;
     align-items: center;
+}
+
+.buyer-information-status {
+    width:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #af4b4b;
 }
 
 .buyer {
